# chat-proxy

./: .flake8  .gitignore  makefile  proxy.py  pyproject.toml
client/: index.html  script.js  style.css
src/: base.py  enums.py  errors.py  logger.py  main_server.py  models.py  proxy.py  proxy_server.py
tests/: test_enums.py  test_models.py
